--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -17,6 +17,7 @@ img{
     width: 20vw;
     box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
     transition: all 0.3s;
+    margin:  10px;
 }
 
 img:hover{
@@ -36,11 +37,11 @@ p{
     font-size: 1.2rem;
 }
 
-button{
+button, .finishedCart{
     background-color: #5c5634;
     color: white;
     font-size: 1.2rem;
-    width: 5rem;
+    width: 9rem;
     border-radius: 10px;
     border: none;
     text-decoration: none;
@@ -52,3 +53,4 @@ button{
     justify-content: center;
     width: 10rem;
 }
+
